map page added to map/

--- a/frontend/templates/map.html
+++ b/frontend/templates/map.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mplus+1p:wght@800&display=swap" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="{% static 'css/map.css' %}" />
   </head>
   <body>
     <div class="main-container">
