--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mooli:wght@400&display=swap" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Moul:wght@400&display=swap" />
-    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}" />
   </head>
   <body>
     <div class="main-container">
