--- a/frontend/templates/map.html
+++ b/frontend/templates/map.html
@@ -12,14 +12,14 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="shape-with-text">
-        <div class="shape-with-text-1"></div>
-        <div class="shape-with-text-2"></div>
-        <div class="shape-with-text-3"></div>
+      <div class="shape-text">
+        <div class="shape-text-1"></div>
+        <div class="shape-text-2"></div>
+        <div class="shape-text-3"></div>
       </div>
-      <div class="flex-row-dffb">
+      <div class="flex-row">
         <div class="logo"></div>
-        <span class="map-4">Map</span>
+        <span class="map">Map</span>
         <div class="login-button"><span class="login">Login</span></div>
         <span class="events">Events</span><span class="connect">Connect</span
         ><span class="home">Home</span>
@@ -27,22 +27,27 @@
       </div>
       <div class="border-map"></div>
       <div class="move-map">
+        <div class="ellipse">
+          <div class="frame"><div class="no-one-under-eighteen"></div></div>
+        </div>
         <div class="group">
-          <div class="group-5">
+          <div class="group-4">
             <div class="pin">
               <div class="sponsored">
-                <div class="fire"><div class="fire-6"></div></div>
+                <div class="fire"><div class="fire-5"></div></div>
               </div>
-              <div class="ellipse"></div>
-              <div class="frame"><div class="no-under-eighteen"></div></div>
+              <div class="ellipse-6"></div>
+              <div class="frame-7">
+                <div class="no-one-under-eighteen-8"></div>
+              </div>
             </div>
             <div class="basemap-image"></div>
-            <div class="basemap-image-7"></div>
+            <div class="basemap-image-9"></div>
           </div>
         </div>
         <div class="plural"><span class="plus-one">+1</span></div>
-        <div class="ellipse-8">
-          <div class="frame-9"><div class="no-one-under-eighteen"></div></div>
+        <div class="ellipse-a">
+          <div class="frame-b"><div class="no-one-under-eighteen-c"></div></div>
         </div>
       </div>
       <div class="border-for-map"></div>
@@ -59,41 +64,41 @@
                 </div>
                 <div class="instagram">
                   <div class="ant-design-instagram-outlined">
-                    <div class="vector-a"></div>
+                    <div class="vector-d"></div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-b">
-              <span class="company-info">Company info</span>
-              <div class="div">
-                <span class="about-us">About Us</span
-                ><span class="blog">Blog</span>
-              </div>
-            </div>
-            <div class="col-md-c">
-              <span class="features">Features</span>
-              <div class="div-d">
-                <span class="business-marketing">Business Marketing</span
-                ><span class="user-analytic">User Analytic</span
-                ><span class="live-chat">Live Chat</span
-                ><span class="unlimited-support">Unlimited Support</span>
-              </div>
-            </div>
             <div class="col-md-e">
-              <span class="resources">Resources</span>
-              <div class="div-f">
-                <span class="ios-android">IOS & Android</span
-                ><span class="watch-a-demo">Watch a Demo</span
-                ><span class="customers">Customers</span
-                ><span class="api">API</span>
+              <span class="h-company-info">Company info</span>
+              <div class="div">
+                <span class="link-about-us">About Us</span
+                ><span class="link-blog">Blog</span>
+              </div>
+            </div>
+            <div class="col-md-f">
+              <span class="h-features">Features</span>
+              <div class="div-10">
+                <span class="link-business-marketing">Business Marketing</span
+                ><span class="link-user-analytic">User Analytic</span
+                ><span class="link-live-chat">Live Chat</span
+                ><span class="link-unlimited-support">Unlimited Support</span>
+              </div>
+            </div>
+            <div class="col-md-11">
+              <span class="span-h">Resources</span>
+              <div class="div-12">
+                <span class="span-link">IOS & Android</span
+                ><span class="span-link-13">Watch a Demo</span
+                ><span class="span-link-14">Customers</span
+                ><span class="span-link-15">API</span>
               </div>
             </div>
           </div>
         </div>
-        <div class="row-10">
+        <div class="row-16">
           <div class="signature-text">
-            <span class="made-during-hackumass-24"
+            <span class="span-made-during-hackumass"
               >Made during HackUMass 24’
             </span>
           </div>
