misc pages fixes

--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="spot-float-image-a">
-          <div class="login-button"><span class="login">Login</span></div>
+          <div class="login-button"><span href="{% url 'login' %}" class="login">Login</span></div>
           <div class="shape-b"></div>
           <div class="flex-row-cad">
             <span class="f">F</span><span class="s-c">S</span>
