--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -47,7 +47,7 @@
             <span class="date-d">1</span><span class="date-e">2</span>
           </div>
         </div>
-        <span class="connect">Connect</span><span class="map">Map</span
+        <span class="connect">Connect</span><span href="{% url 'map' %}" class="map">Map</span
         ><span class="home">Home</span>
         <div class="line"></div>
         <div class="rectangle">
