homepage nav fix

--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -51,10 +51,8 @@
             <span class="date-d">1</span><span class="date-e">2</span>
           </div>
         </div>
-          <a href="{% url 'connect' %}">
           <span class="connect">Connect</span>
-          </a>
-      <span class="home">Home</span>
+          <a href="{% url 'homepage' %}"><span class="home">Home</span></a>
         <div class="line"></div>
         <div class="rectangle">
           <div class="flex-row-cd">
