--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +40,7 @@
 <body>
   <div class="frame-129">
     <div class="frame-128">
-      <img class="image-1" src="../assets/image-10.png" />
+      <img class="image-1" src="{% static 'assets/image-10.png' %}" />
     </div>
     <div class="footer">
       <div class="contact-us">
@@ -51,13 +52,13 @@
                 <div class="facebook">
                   <img
                     class="ant-design-facebook-filled"
-                    src="../assets/ant-design-facebook-filled0.svg"
+                    src="{% static 'assets/ant-design-facebook-filled0.svg' %}"
                   />
                 </div>
                 <div class="instagram">
                   <img
                     class="ant-design-instagram-outlined"
-                    src="../assets/ant-design-instagram-outlined0.svg"
+                    src="{% static 'assets/ant-design-instagram-outlined0.svg' %}"
                   />
                 </div>
               </div>
@@ -102,7 +103,7 @@
         </div>
       </div>
     </div>
-    <img class="logo" src="../assets/logo0.png" />
+    <img class="logo" src="{% static 'assets/logo0.png' %}" />
     <div class="facebook-messenger"></div>
     <div class="frame-104">
       <div class="frame-36">
@@ -132,7 +133,7 @@
         <div class="input-content">
           <div class="icon-text">
             <div class="icon">
-              <img class="group" src="../assets/group0.svg" />
+              <img class="group" src="{% static 'assets/group0.svg' %}" />
             </div>
             <div class="placeholder">Email</div>
           </div>
@@ -141,11 +142,11 @@
       <div class="jnt-input2">
         <div class="input-content">
           <div class="view">
-            <img class="group2" src="../assets/group1.svg" />
+            <img class="group2" src="{% static 'assets/group1.svg' %}" />
           </div>
           <div class="frame-2">
             <div class="lock">
-              <img class="group3" src="../assets/group2.svg" />
+              <img class="group3" src="{% static 'assets/group2.svg' %}" />
             </div>
             <div class="placeholder">Password</div>
           </div>
@@ -154,7 +155,7 @@
       <div class="forgot-password">Forgot password?</div>
       <img
         class="pngtree-white-spot-float-image-1308466-removebg-preview-2"
-        src="../assets/pngtree-white-spot-float-image-1308466-removebg-preview-20.png"
+        src="{% static 'assets/pngtree-white-spot-float-image-1308466-removebg-preview-20.png' %}
       />
     </div>
   </div>
