user and psw changes for input fields

--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -135,7 +135,7 @@
             <div class="icon">
               <img class="group" src="{% static 'assets/group0.svg' %}" />
             </div>
-            <div class="placeholder">Email</div>
+            <input type="email" class="input-email" placeholder="Email" />
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
             <div class="lock">
               <img class="group3" src="{% static 'assets/group2.svg' %}" />
             </div>
-            <div class="placeholder">Password</div>
+            <input type="password" class="input-password" placeholder="Password" />
           </div>
         </div>
       </div>
