--- a/frontend/static/css/login.css
+++ b/frontend/static/css/login.css
@@ -30,7 +30,7 @@
   position: relative;
 }
 .image-1 {
-  width: 1560px;
+  width: 100%;
   height: 918px;
   position: absolute;
   left: 0px;
@@ -433,7 +433,9 @@
   height: 54px;
   position: absolute;
   left: 0px;
-  top: 163px;
+  top: 170px;
+  display: flex;
+  align-items: center;
 }
 .input-content {
   border-radius: 8px;
@@ -462,6 +464,22 @@
   height: 24px;
   position: relative;
 }
+.input-email {
+  width: 100%;
+  padding: 10px;
+  padding-left: 50px; /* Adjust padding if needed for spacing */
+  font-size: 16px;
+  color: white; /* Text color for input */
+  background-color: transparent; /* Blend with background */
+  border: none; /* Remove default border */
+  outline: none; /* Remove default outline */
+  font-family: "Montserrat-Regular", sans-serif;
+}
+
+.input-email::placeholder {
+  color: white; /* White placeholder text */
+  opacity: 0.7; /* Adjust opacity as needed */
+}
 .group {
   height: auto;
   position: absolute;
@@ -486,6 +504,8 @@
   position: absolute;
   left: 0px;
   top: 238px;
+  display: flex;
+  align-items: center;
 }
 .view {
   width: 24px;
@@ -524,6 +544,23 @@
   top: 0px;
   overflow: visible;
 }
+.input-password {
+  width: 100%;
+  padding: 10px;
+  padding-left: 50px; /* Space for icon */
+  font-size: 16px;
+  color: white; /* Text color for input */
+  background-color: transparent; /* Blend with background */
+  border: none; /* Remove default border */
+  outline: none; /* Remove default outline */
+  font-family: "Montserrat-Regular", sans-serif;
+}
+
+.input-password::placeholder {
+  color: white; /* White placeholder text */
+  opacity: 0.7; /* Adjust opacity as needed */
+}
+
 .forgot-password {
   color: var(--light-pink, #cd9fa2);
   text-align: left;
