--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -204,10 +204,10 @@
     <div class="we-re-on-a-mission-to-bring-people-together">
       <span>
         <span class="we-re-on-a-mission-to-bring-people-together-span">
-          We’re on a
+          On a
         </span>
         <span class="we-re-on-a-mission-to-bring-people-together-span2">
-          mission
+          MISSION
         </span>
         <span class="we-re-on-a-mission-to-bring-people-together-span3"></span>
         <span class="we-re-on-a-mission-to-bring-people-together-span4">
