--- a/frontend/static/css/homepage.css
+++ b/frontend/static/css/homepage.css
@@ -82,7 +82,7 @@
   border-color: #000000;
   border-width: 1px;
   opacity: 0.91;
-  width: 1366px;
+  width: 100%;
   height: 2035px;
   position: absolute;
   left: 0px;
@@ -109,15 +109,6 @@
   position: absolute;
   left: 838px;
   top: 833px;
-  overflow: visible;
-}
-.course-background-8 {
-  border-radius: 0px;
-  width: 345.69px;
-  height: 347px;
-  position: absolute;
-  left: 838px;
-  top: 1517px;
   overflow: visible;
 }
 .course-background-6 {
@@ -465,14 +456,6 @@
   top: -2px;
   object-fit: cover;
 }
-.ellipse-96 {
-  width: 964px;
-  height: 471.35px;
-  position: absolute;
-  left: 825px;
-  top: 822px;
-  overflow: visible;
-}
 .rectangle-15 {
   background: #ffffff;
   border-radius: 10px;
@@ -503,7 +486,7 @@
   height: 0.47%;
   position: absolute;
   right: 37.98%;
-  left: 61.71%;
+  left: 825px;
   bottom: 90.61%;
   top: 8.92%;
   overflow: visible;
@@ -513,7 +496,7 @@
   height: 0.47%;
   position: absolute;
   right: 7.88%;
-  left: 91.82%;
+  left: 1245px;
   bottom: 90.7%;
   top: 8.83%;
   transform: translate(-5.2px, -1px);
