events page finished

--- a/frontend/static/css/events.css
+++ b/frontend/static/css/events.css
@@ -32,7 +32,7 @@
   border-color: #000000;
   border-width: 1px;
   opacity: 0.91;
-  width: 1366px;
+  width: 100%;
   height: 1058px;
   position: absolute;
   left: -2px;
