--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -322,8 +322,9 @@
     <img class="vector12" src="{% static 'assets/vector11.svg' %}" />
     <a href="{% url 'map' %}">
       <div class="map">Map</div>
+    </a><a href="{% url 'events' %}">
+      <div class="events">Events</div>
     </a>
-    <div class="events">Events</div>
     <div class="home">Home</div>
     <div class="connect">Connect</div>
     <img class="logo" src="{% static 'assets/logo0.png' %}" />
