added signup page

--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -111,12 +111,9 @@
           <div class="jnt-button">
             <div class="button">
               <div class="content">
-                
                 <a href="{% url 'homepagelogo' %}">
                   <div class="label">Log in</div>
-              </a>
-
-
+                </a>
               </div>
             </div>
           </div>
@@ -127,7 +124,9 @@
         <div class="button2">
           <div class="button3">
             <div class="content">
-              <div class="label2">Registration</div>
+              <a href="{% url 'registration' %}">
+                <div class="label">Registration</div>
+              </a>
             </div>
           </div>
         </div>
