--- a/frontend/static/css/registration.css
+++ b/frontend/static/css/registration.css
@@ -247,7 +247,7 @@
 }
 .frame-105 {
   background: #ffffff;
-  width: 1366px;
+  width: 100%;
   height: 885px;
   position: absolute;
   left: 0px;
@@ -257,20 +257,12 @@
 .background {
   border-radius: 0px;
   opacity: 0.91;
-  width: 1366px;
+  width: 100%;
   height: 2188px;
   position: absolute;
   left: 0px;
   top: -1267px;
   overflow: visible;
-}
-.logo {
-  width: 129px;
-  height: 122px;
-  position: absolute;
-  left: 1199px;
-  top: 40px;
-  object-fit: cover;
 }
 .already-have-the-account {
   color: #c4c4c4;
@@ -635,18 +627,9 @@
   left: 763px;
   top: 35px;
 }
-.pngtree-white-spot-float-image-1308466-removebg-preview-5 {
-  opacity: 0.5;
-  width: 266px;
-  height: 360px;
-  position: absolute;
-  left: 1098px;
-  top: 35px;
-  object-fit: cover;
-}
 .woman-s-face-with-word-galaxy-it-900370-7001-removebg-preview-1 {
   opacity: 0.8;
-  width: 541px;
+  width: 40%;
   height: 947px;
   position: absolute;
   left: 0px;
