Registration to register on register page

--- a/frontend/templates/registration.html
+++ b/frontend/templates/registration.html
@@ -140,7 +140,7 @@
           <div class="button3">
             <div class="content">
               <a href="{% url 'homepagelogo' %}">
-                <div class="label2">Registration</div>
+                <div class="label2">Register</div>
               </a>
             </div>
           </div>
