--- a/frontend/templates/registration.html
+++ b/frontend/templates/registration.html
@@ -146,11 +146,13 @@
           </div>
         </div>
       </div>
-      <div class="already-have-the-account2">Already have the account?</div>
+      <div class="already-have-the-account2">Already have an account?</div>
       <div class="button">
         <div class="button4">
           <div class="content">
-            <div class="label">Sign in</div>
+            <a href="{% url 'login' %}">
+              <div class="label">Sign in</div>
+            </a>
           </div>
         </div>
       </div>
