--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -229,7 +229,9 @@
       </div>
     </div>
     <div class="frame">
-      <div class="btn-text2">Find events</div>
+      <a href="{% url 'events' %}">
+        <div class="btn-text2">Find events</div>
+      </a>
     </div>
     <div class="paragraph">Some of our most popular events</div>
     <div class="course-background-1"></div>
