--- a/frontend/static/css/homepagelogo.css
+++ b/frontend/static/css/homepagelogo.css
@@ -73,7 +73,7 @@
 }
 .background {
   opacity: 0.91;
-  width: 1548px;
+  width: 100%;
   height: 2169px;
   position: absolute;
   left: -4px;
@@ -532,14 +532,6 @@
   position: absolute;
   left: 1254px;
   top: -5px;
-}
-.ellipse-96 {
-  width: 964px;
-  height: 471.35px;
-  position: absolute;
-  left: calc(50% - 570.5px);
-  top: 818px;
-  overflow: visible;
 }
 .rectangle-15 {
   border-radius: 0px;
